Back to what it was

--- a/albionboxes/prod_volcano_goober.yaml
+++ b/albionboxes/prod_volcano_goober.yaml
@@ -11,8 +11,6 @@ substitutions:
   heat_icon: "mdi:fire"
   fan_icon: "mdi:fan"
   volcano_switch_restore_mode: DISABLED
-  # https://esphome.io/guides/automations.html#script-component
-  volcano_script_mode: single
   # shorter than 60s seems to cause issues right now
   temperature_sensor_update_interval: "60s"
   main_service_uuid: "10110000-5354-4f52-5a26-4249434b454c"
@@ -127,21 +125,6 @@ sensor:
     ble_client_id: volcano
     name: "${friendly_name} BLE RSSI"
 
-script:
-  - id: set_ble_bool_char_script
-    mode: ${volcano_script_mode}
-    parameters:
-      char_uuid: string
-    then:
-      - lambda: |-
-          ESP_LOGD("set_ble_bool_char_script", "set ble bool for %s", char_uuid);
-      - ble_client.ble_write:
-          id: volcano
-          service_uuid: ${main_service_uuid}
-          characteristic_uuid: ${char_uuid}
-          # List of bytes to write.
-          value: [ 0x00 ]
-
 switch:
   - platform: template
     name: "${friendly_name} Heat Switch"
@@ -150,25 +133,19 @@ switch:
     optimistic: true
     assumed_state: true
     turn_on_action:
-      - script.execute:
-          id: set_ble_bool_char_script
-          char_uuid: ${heat_turn_on_char_uuid}
-#      - ble_client.ble_write:
-#          id: volcano
-#          service_uuid: ${main_service_uuid}
-#          characteristic_uuid: ${heat_turn_on_char_uuid}
-#          # List of bytes to write.
-#          value: [0x00]
+      - ble_client.ble_write:
+          id: volcano
+          service_uuid: ${main_service_uuid}
+          characteristic_uuid: ${heat_turn_on_char_uuid}
+          # List of bytes to write.
+          value: [0x00]
     turn_off_action:
-      - script.execute:
-          id: set_ble_bool_char_script
-          char_uuid: ${heat_turn_off_char_uuid}
-#      - ble_client.ble_write:
-#          id: volcano
-#          service_uuid: ${main_service_uuid}
-#          characteristic_uuid: ${heat_turn_off_char_uuid}
-#          # List of bytes to write.
-#          value: [0x00]
+      - ble_client.ble_write:
+          id: volcano
+          service_uuid: ${main_service_uuid}
+          characteristic_uuid: ${heat_turn_off_char_uuid}
+          # List of bytes to write.
+          value: [0x00]
 
   - platform: template
     name: "${friendly_name} Fan Switch"
@@ -177,25 +154,19 @@ switch:
     optimistic: true
     assumed_state: true
     turn_on_action:
-      - script.execute:
-          id: set_ble_bool_char_script
-          char_uuid: ${fan_turn_on_char_uuid}
-#      - ble_client.ble_write:
-#          id: volcano
-#          service_uuid: ${main_service_uuid}
-#          characteristic_uuid: ${fan_turn_on_char_uuid}
-#          # List of bytes to write.
-#          value: [ 0x00 ]
+      - ble_client.ble_write:
+          id: volcano
+          service_uuid: ${main_service_uuid}
+          characteristic_uuid: ${fan_turn_on_char_uuid}
+          # List of bytes to write.
+          value: [ 0x00 ]
     turn_off_action:
-      - script.execute:
-          id: set_ble_bool_char_script
-          char_uuid: ${fan_turn_off_char_uuid}
-#      - ble_client.ble_write:
-#          id: volcano
-#          service_uuid: ${main_service_uuid}
-#          characteristic_uuid: ${fan_turn_off_char_uuid}
-#          # List of bytes to write.
-#          value: [ 0x00 ]
+      - ble_client.ble_write:
+          id: volcano
+          service_uuid: ${main_service_uuid}
+          characteristic_uuid: ${fan_turn_off_char_uuid}
+          # List of bytes to write.
+          value: [ 0x00 ]
 
 # https://esphome.io/components/esp32_ble_tracker
 #esp32_ble_tracker:
