--- a/albionboxes/prod_living_room_cabinet_temp_sensor.yaml
+++ b/albionboxes/prod_living_room_cabinet_temp_sensor.yaml
@@ -59,60 +59,44 @@ tca9548a:
 #        channel: 5
 
 sensor:
-  # https://esphome.io/components/sensor/sht4x.html
-  - platform: sht4x
-    i2c_id: multiplex0channel0
-    address: ${sht_address}
-    temperature:
-      name: "${zeroth_sensor_name} Temperature"
-    humidity:
-      name: "${zeroth_sensor_name} Relative Humidity"
-  # https://esphome.io/components/sensor/bmp280.html
-  - platform: bmp280
-    i2c_id: multiplex0channel0
-    temperature:
-      name: "${zeroth_sensor_name} Outside Temperature"
-      oversampling: ${oversampling_value}
-    pressure:
-      name: "${zeroth_sensor_name} Outside Pressure"
-    address: ${bmp_address}
-    update_interval: ${update_interval_value}
-  # https://esphome.io/components/sensor/sht4x.html
-  - platform: sht4x
-    i2c_id: multiplex0channel1
-    address: ${sht_address}
-    temperature:
-      name: "${first_sensor_name} Temperature"
-    humidity:
-      name: "${first_sensor_name} Relative Humidity"
-  # https://esphome.io/components/sensor/bmp280.html
-  - platform: bmp280
-    i2c_id: multiplex0channel1
-    temperature:
-      name: "${first_sensor_name} Outside Temperature"
-      oversampling: ${oversampling_value}
-    pressure:
-      name: "${first_sensor_name} Outside Pressure"
-    address: ${bmp_address}
-    update_interval: ${update_interval_value}
-  # https://esphome.io/components/sensor/sht4x.html
-  - platform: sht4x
-    i2c_id: multiplex0channel2
-    address: ${sht_address}
-    temperature:
-      name: "${second_sensor_name} Temperature"
-    humidity:
-      name: "${second_sensor_name} Relative Humidity"
-  # https://esphome.io/components/sensor/bmp280.html
-  - platform: bmp280
-    i2c_id: multiplex0channel2
-    temperature:
-      name: "${second_sensor_name} Outside Temperature"
-      oversampling: ${oversampling_value}
-    pressure:
-      name: "${second_sensor_name} Outside Pressure"
-    address: ${bmp_address}
-    update_interval: ${update_interval_value}
+  - <<: !include { file: common/env_iv_sensor.yaml, vars: { env_iv_i2c_id: "multiplex0channel0", env_iv_sensor_name: "test" } }
+
+#  # https://esphome.io/components/sensor/sht4x.html
+#  - platform: sht4x
+#    i2c_id: multiplex0channel1
+#    address: ${sht_address}
+#    temperature:
+#      name: "${first_sensor_name} Temperature"
+#    humidity:
+#      name: "${first_sensor_name} Relative Humidity"
+#  # https://esphome.io/components/sensor/bmp280.html
+#  - platform: bmp280
+#    i2c_id: multiplex0channel1
+#    temperature:
+#      name: "${first_sensor_name} Outside Temperature"
+#      oversampling: ${oversampling_value}
+#    pressure:
+#      name: "${first_sensor_name} Outside Pressure"
+#    address: ${bmp_address}
+#    update_interval: ${update_interval_value}
+#  # https://esphome.io/components/sensor/sht4x.html
+#  - platform: sht4x
+#    i2c_id: multiplex0channel2
+#    address: ${sht_address}
+#    temperature:
+#      name: "${second_sensor_name} Temperature"
+#    humidity:
+#      name: "${second_sensor_name} Relative Humidity"
+#  # https://esphome.io/components/sensor/bmp280.html
+#  - platform: bmp280
+#    i2c_id: multiplex0channel2
+#    temperature:
+#      name: "${second_sensor_name} Outside Temperature"
+#      oversampling: ${oversampling_value}
+#    pressure:
+#      name: "${second_sensor_name} Outside Pressure"
+#    address: ${bmp_address}
+#    update_interval: ${update_interval_value}
 #  # https://esphome.io/components/sensor/sht4x.html
 #  - platform: sht4x
 #    i2c_id: multiplex0channel3
