--- a/albionboxes/prod_reading_button.yaml
+++ b/albionboxes/prod_reading_button.yaml
@@ -23,6 +23,7 @@ packages:
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
   internal_temp: !include common/internal_temp.yaml
+  rufus_activity_request: !include common/rufus_activity_request.yaml
 
 # ${rufus_url}/api/v1/activities/special-wfh
 
@@ -42,55 +43,25 @@ binary_sensor:
           - OFF for at least 0.2s
         then:
           - logger.log: "Double Clicked"
-          - logger.log: "Vinyl request"
-          - http_request.get:
-              url: ${rufus_url}/api/v1/activities/vinyl
-              headers:
-                Content-Type: application/json
-              verify_ssl: false
-              on_response:
-                then:
-                  - logger.log:
-                      format: 'Vinyl activity => Response status: %d, Duration: %u ms'
-                      args:
-                        - status_code
-                        - duration_ms
-          - logger.log: "Done with Vinyl activity request now skip any delay!"
+          - script.execute:
+              id: rufus_activity_request
+              rufus_url: "${rufus_url}"
+              activity: "vinyl"
       - timing:
           - ON for 1s to 4s
           - OFF for at least 0.5s
         then:
           - logger.log: "Single Long Clicked"
-          - logger.log: "Start All off activity request"
-          - http_request.get:
-              url: ${rufus_url}/api/v1/activities/all-off?kitchen=0&dining_room=0
-              headers:
-                Content-Type: application/json
-              verify_ssl: false
-              on_response:
-                then:
-                  - logger.log:
-                      format: 'All off activity => Response status: %d, Duration: %u ms'
-                      args:
-                        - status_code
-                        - duration_ms
-          - logger.log: "Done with All off activity request now skip any delay!"
+          - script.execute:
+              id: rufus_activity_request
+              rufus_url: "${rufus_url}"
+              activity: "all-off?kitchen=0&dining_room=0"
       - timing:
           - ON for at most 1s
           - OFF for at least 0.5s
         then:
           - logger.log: "Single Short Clicked"
-          - logger.log: "Start living room reading activity request"
-          - http_request.get:
-              url: ${rufus_url}/api/v1/activities/living-room-reading
-              headers:
-                Content-Type: application/json
-              verify_ssl: false
-              on_response:
-                then:
-                  - logger.log:
-                      format: 'Living room reading activity => Response status: %d, Duration: %u ms'
-                      args:
-                        - status_code
-                        - duration_ms
-          - logger.log: "Done with regular living room reading activity request now skip any delay!"
+          - script.execute:
+              id: rufus_activity_request
+              rufus_url: "${rufus_url}"
+              activity: "living-room-reading"
