--- a/albionboxes/prod_full_bath_shower_speakerz_buttons.yaml
+++ b/albionboxes/prod_full_bath_shower_speakerz_buttons.yaml
@@ -24,6 +24,7 @@ packages:
   albion_boxes_info: !include common/albionboxes_info.yaml
   internal_temp: !include common/internal_temp.yaml
   button: !include { file: common/default_atom_button.yaml, vars: { button_pin: 41 } }
+  rufus_activity_request: !include common/rufus_activity_request.yaml
 
 # ${rufus_url}/api/v1/activities/kitchen-lights-on
 # ${rufus_url}/api/v1/activities/kitchen-lights-off
@@ -41,20 +42,11 @@ binary_sensor:
     on_press:
       then:
         - logger.log: "Red Button Clicked"
-        - logger.log: "Turn off full bath music lights request"
-        - http_request.get:
-            url: ${rufus_url}/api/v1/activities/full-bath-music-lights-off
-            headers:
-              Content-Type: application/json
-            verify_ssl: false
-            on_response:
-              then:
-                - logger.log:
-                    format: 'Turn off full bath music lights activity => Response status: %d, Duration: %u ms'
-                    args:
-                      - status_code
-                      - duration_ms
-        - logger.log: "Done with red button turn off full bath music lights request!"
+        - script.execute:
+            id: rufus_activity_request
+            rufus_url: "${rufus_url}"
+            activity: "full-bath-music-lights-off"
+
   - platform: gpio
     pin:
       number: 1
@@ -63,17 +55,7 @@ binary_sensor:
     on_press:
       then:
         - logger.log: "Blue Button Clicked"
-        - logger.log: "Turn on full bath music lights request"
-        - http_request.get:
-            url: ${rufus_url}/api/v1/activities/full-bath-music-lights
-            headers:
-              Content-Type: application/json
-            verify_ssl: false
-            on_response:
-              then:
-                - logger.log:
-                    format: 'Turn on full bath music lights activity => Response status: %d, Duration: %u ms'
-                    args:
-                      - status_code
-                      - duration_ms
-        - logger.log: "Done with blue button turn on full bath music lights request!"
+        - script.execute:
+            id: rufus_activity_request
+            rufus_url: "${rufus_url}"
+            activity: "full-bath-music-lights"
