--- a/albionboxes/common/albion_v2_volume_dial.yaml
+++ b/albionboxes/common/albion_v2_volume_dial.yaml
@@ -86,30 +86,7 @@ sensor:
                   entity_id: ${receiver_zone_media_player_entity}
                   volume_level: !lambda 'return id(media_volume_value) / 100.0;'
 
-  - platform: homeassistant
-    name: "${friendly_name} Media Volume"
-    id: receiver_zone_volume
-    entity_id: ${receiver_zone_media_player_entity}
-    attribute: volume_level
-    on_value:
-      - logger.log:
-          format: "The media_player volume sensor reports value %f"
-          args: [ 'id(receiver_zone_volume).state' ]
-      # always update volume
-      - lambda: |-
-          float volume = id(receiver_zone_volume).state;
-          ESP_LOGD("hass media volume callback", "got volume %f", volume);
-          id(media_volume_value) = (volume * 100.0);
-      # don't forget to update the rotary encoder
-      - sensor.rotary_encoder.set_value:
-          id: rotaryencoder
-          value: !lambda 'return id(media_volume_value);'
-      - if:
-          condition:
-            or:
-              - display.is_displaying_page: VolumePage
-          then:
-            - component.update: my_lcd
+  - <<: !include ./dial_hass_volume_sensor.yaml
 
 light:
   - <<: !include ./dial_backlight_light.yaml
