--- a/albionboxes/common/albion_v2_volume_dial.yaml
+++ b/albionboxes/common/albion_v2_volume_dial.yaml
@@ -23,13 +23,13 @@ esphome:
       - light.turn_on: backlight
 
 packages:
-  colors: !include ./dial_colors.yaml
-  internal_ic2: !include ./dial_internal_i2c.yaml
-  fonts: !include ./dial_fonts.yaml
-  images: !include ./dial_images.yaml
-  spi: !include ./dial_spi.yaml
-  uart: !include ./dial_uart.yaml
-  dial_speaker: !include ./dial_speaker.yaml
+  colors: !include ./dial/dial_colors.yaml
+  internal_ic2: !include ./dial/dial_internal_i2c.yaml
+  fonts: !include ./dial/dial_fonts.yaml
+  images: !include ./dial/dial_images.yaml
+  spi: !include ./dial/dial_spi.yaml
+  uart: !include ./dial/dial_uart.yaml
+  dial_speaker: !include ./dial/dial_speaker.yaml
 
 # https://esphome.io/guides/automations.html#global-variables
 globals:
@@ -51,49 +51,15 @@ globals:
     restore_value: no
 
 sensor:
-  # https://esphome.io/components/sensor/rotary_encoder.html
-  - platform: rotary_encoder
-    name: "${friendly_name} Rotary Encoder"
-    id: rotaryencoder
-    max_value: 100
-    min_value: 0
-    resolution: 1
-    filters:
-      - throttle: 1s
-    pin_a:
-      number: GPIO40
-      mode:
-        input: true
-        pullup: true
-    pin_b:
-      number: GPIO41
-      mode:
-        input: true
-        pullup: true
-    accuracy_decimals: 1
-    on_value:
-      - if:
-          condition:
-            or:
-              - display.is_displaying_page: VolumePage
-          then:
-            - globals.set:
-                id: media_volume_value
-                value: !lambda 'int val = x * id(volume_encoder_resolution); return (val > 100) ? 100 : val;'
-            - homeassistant.service:
-                service: media_player.volume_set
-                data:
-                  entity_id: ${receiver_zone_media_player_entity}
-                  volume_level: !lambda 'return id(media_volume_value) / 100.0;'
-
-  - <<: !include ./dial_hass_volume_sensor.yaml
+  - <<: !include ./dial/dial_volume_rotary_encoder.yaml
+  - <<: !include ./dial/dial_hass_volume_sensor.yaml
 
 light:
-  - <<: !include ./dial_backlight_light.yaml
+  - <<: !include ./dial/dial_backlight_light.yaml
 
 output:
-  - <<: !include ./dial_backlight_output.yaml
-  - <<: !include ./dial_speaker_output.yaml
+  - <<: !include ./dial/dial_backlight_output.yaml
+  - <<: !include ./dial/dial_speaker_output.yaml
 
 # https://esphome.io/components/display/ili9xxx
 display:
@@ -141,4 +107,4 @@ display:
           - component.update: my_lcd
 
 binary_sensor:
-  - <<: !include ./dial_button.yaml
+  - <<: !include ./dial/dial_button.yaml
