--- a/albionboxes/common/dial/dial_hass_volume_sensor.yaml
+++ b/albionboxes/common/dial/dial_hass_volume_sensor.yaml
@@ -1,5 +1,5 @@
 - platform: homeassistant
-  name: "${friendly_name} Media Volume"
+  name: "${friendly_name} Media Player Zone Volume"
   id: receiver_zone_volume
   entity_id: ${receiver_zone_media_player_entity}
   attribute: volume_level
@@ -10,7 +10,7 @@
     # always update volume
     - lambda: |-
         float volume = id(receiver_zone_volume).state;
-        ESP_LOGD("hass media volume callback", "got volume %f", volume);
+        ESP_LOGD("hass_media_volume_callback", "got volume %f", volume);
         id(media_volume_value) = (volume * 100.0);
     # don't forget to update the rotary encoder
     - sensor.rotary_encoder.set_value:
