--- a/albionboxes/common/albion_v3_volume_dial.yaml
+++ b/albionboxes/common/albion_v3_volume_dial.yaml
@@ -36,15 +36,15 @@ globals:
     type: int
     initial_value: '1'
     restore_value: yes
-  - id: media_volume_muted
-    type: bool
-    initial_value: 'false'
-    restore_value: yes
-  - id: media_zone_state
-    type: std::string
-    max_restore_data_length: 64
-    initial_value: '"unknown"'
-    restore_value: yes
+#  - id: media_volume_muted
+#    type: bool
+#    initial_value: 'false'
+#    restore_value: yes
+#  - id: media_zone_state
+#    type: std::string
+#    max_restore_data_length: 64
+#    initial_value: '"unknown"'
+#    restore_value: yes
   - id: selected_color
     type: Color
     initial_value: very_dark_blue
@@ -66,9 +66,13 @@ packages:
 sensor:
   - <<: !include ./dial/dial_volume_rotary_encoder.yaml
   - <<: !include ./dial/dial_hass_volume_sensor.yaml
+#  - <<: !include ./dial/dial_hass_zone_state_sensor.yaml
 
 text_sensor:
   - <<: !include ./dial/dial_hass_zone_state_sensor.yaml
+  - platform: template
+    name: "${friendly_name} Zone State Sensor"
+    id: media_zone_state
 
 light:
   - <<: !include ./dial/dial_backlight_light.yaml
@@ -106,15 +110,20 @@ display:
           float screenwidth = it.get_width();
           float halfscreenheight = screenheight / 2;
           float halfscreenwidth = screenwidth / 2;
+          
+          ESP_LOGD("volume_page", "got muted %d", id(media_volume_muted).state);
+          ESP_LOGD("volume_page", "got state %s", id(media_zone_state).state.c_str());
 
           // Print volume as percent
           it.printf(halfscreenwidth, 20, id(roboto48), TextAlign::CENTER, "%.0f", id(media_volume_value));
 
           // media_pause Circle
-          it.filled_circle(halfscreenwidth, halfscreenheight - 15, 50, my_light_blue);  
-          if ( id(media_zone_state).c_str() == "off" || id(media_zone_state).c_str() == "standby" ) {
+          it.filled_circle(halfscreenwidth, halfscreenheight - 15, 50, my_light_blue);
+          if ( id(media_zone_state).state == "off" || id(media_zone_state).state == "standby" ) {
+            ESP_LOGD("volume_page", "drawing media_zone_state power off");
             it.image(halfscreenwidth, halfscreenheight - 15, power_off_large, ImageAlign::CENTER);
           } else {
+            ESP_LOGD("volume_page", "drawing media_zone_state power on");
             it.image(halfscreenwidth, halfscreenheight - 15, power_on_large, ImageAlign::CENTER);
           }
           //if ( id(appletv_media).state == "paused" || id(appletv_media).state == "idle" ) {
@@ -126,7 +135,7 @@ display:
           // Mute Toggle Circle
           it.filled_circle(halfscreenwidth, 200, 30, my_light_blue);  
           //it.image(halfscreenwidth, 200, volume_mute, ImageAlign::CENTER);
-          if (id(media_volume_muted)) {
+          if (id(media_volume_muted).state) {
             it.image(halfscreenwidth, 200, volume_mute, ImageAlign::CENTER);
           } else {
             it.image(halfscreenwidth, 200, volume_high, ImageAlign::CENTER);
@@ -144,6 +153,10 @@ binary_sensor:
   - <<: !include ./dial/dial_button.yaml
   - <<: !include ./dial/dial_hass_mute_sensor.yaml
 
+  - platform: template
+    name: "${friendly_name} Zone Muted Sensor"
+    id: media_volume_muted
+
   - platform: touchscreen
     name: "${friendly_name} Volume Screen Zone Muted Button"
     page_id: VolumePage
@@ -159,11 +172,35 @@ binary_sensor:
             service: media_player.volume_mute
             data:
               entity_id: ${receiver_zone_media_player_entity}
-#              is_volume_muted: !lambda 'return (id(receiver_zone_muted).state == "on") ? false : true;'
-#              is_volume_muted: !lambda 'return id(receiver_zone_muted);'
-              is_volume_muted: |-
-                ESP_LOGD("media_player_volume_mute", "receiver_zone_muted: %d", id(receiver_zone_muted));
-                return id(receiver_zone_muted);
+              is_volume_muted: !lambda 'return (id(media_volume_muted).state) ? false : true;'
+#        - if:
+#            condition:
+#              # Should return either true or false
+#              lambda: |-
+#                return id(media_volume_muted).state;
+#            then:
+#              - homeassistant.service:
+#                  service: media_player.volume_mute
+#                  data:
+#                    entity_id: ${receiver_zone_media_player_entity}
+#                    is_volume_muted: "false"
+#            else:
+#              - homeassistant.service:
+#                  service: media_player.volume_mute
+#                  data:
+#                    entity_id: ${receiver_zone_media_player_entity}
+#                    is_volume_muted: "true"
+#        - homeassistant.service:
+#            service: media_player.volume_mute
+#            data:
+#              entity_id: ${receiver_zone_media_player_entity}
+##              is_volume_muted: !lambda 'return (id(receiver_zone_muted).state == "on") ? false : true;'
+##              is_volume_muted: !lambda 'return id(receiver_zone_muted);'
+#              is_volume_muted: |-
+#                ESP_LOGD("media_player_volume_mute", "receiver_zone_muted: %d", id(media_volume_muted).state);
+#                return !id(media_volume_muted).state;
+        - lambda: |-
+            ESP_LOGD("media_player_volume_mute", "after hass muted action");
 
   - platform: touchscreen
     name: "${friendly_name} Volume Screen Zone State Button"
@@ -175,8 +212,21 @@ binary_sensor:
     on_release:
       then:
         - lambda: |-
-            ESP_LOGD("media_player_zone_state", "touched zone state button");
-        - homeassistant.service:
-            service: media_player.turn_on
-            data:
-              entity_id: ${receiver_zone_media_player_entity}
+            ESP_LOGD("media_player_zone_state", "touched zone power state button");
+        - if:
+            condition:
+              # Should return either true or false
+              lambda: |-
+                return ( id(media_zone_state).state == "off" || id(media_zone_state).state == "standby" );
+            then:
+              - homeassistant.service:
+                  service: media_player.turn_on
+                  data:
+                    entity_id: ${receiver_zone_media_player_entity}
+            else:
+              - homeassistant.service:
+                  service: media_player.turn_off
+                  data:
+                    entity_id: ${receiver_zone_media_player_entity}
+        - lambda: |-
+            ESP_LOGD("media_player_zone_state", "after hass power state action");
