--- a/albionboxes/common/albion_v3_volume_dial.yaml
+++ b/albionboxes/common/albion_v3_volume_dial.yaml
@@ -49,7 +49,6 @@ packages:
   spi: !include ./dial/dial_spi.yaml
   uart: !include ./dial/dial_uart.yaml
   dial_speaker: !include ./dial/dial_speaker.yaml
-  touchscreen: !include ./dial/dial_touchscreen.yaml
 
 sensor:
   - <<: !include ./dial/dial_volume_rotary_encoder.yaml
@@ -67,6 +66,9 @@ light:
 output:
   - <<: !include ./dial/dial_backlight_output.yaml
   - <<: !include ./dial/dial_speaker_output.yaml
+
+touchscreen:
+  - <<: !include { file: ./dial/dial_touchscreen.yaml, vars: { swap_xy: "${swap_xy}", mirror_x: "${mirror_x}", mirror_y: "${mirror_y}" } }
 
 # https://esphome.io/components/display/ili9xxx
 display:
