--- a/albionboxes/prod_kitchen_sink_volume_dial.yaml
+++ b/albionboxes/prod_kitchen_sink_volume_dial.yaml
@@ -6,9 +6,10 @@ substitutions:
   box_config_file_name: prod_kitchen_sink_volume_dial
   display_rotation: '270'
   receiver_zone_media_player_entity: "media_player.denon_avr_x4300h_zone_3_kitchen"
-  swap_xy: false
-  mirror_x: false
-  mirror_y: false
+  # https://github.com/esphome/issues/issues/5265#issuecomment-1867168652
+  swap_xy: "true"
+  mirror_x: "false"
+  mirror_y: "true"
 
 # inspired by https://github.com/RoyalPineapple/esphome/blob/main/m5dial/m5_dial_test.yaml
 
