--- a/albionboxes/prod_dining_room_volume_dial.yaml
+++ b/albionboxes/prod_dining_room_volume_dial.yaml
@@ -6,9 +6,9 @@ substitutions:
   box_config_file_name: prod_dining_room_volume_dial
   display_rotation: '180'
   receiver_zone_media_player_entity: "media_player.denon_avr_x4300h_zone_2_dining_room"
-  swap_xy: false
-  mirror_x: false
-  mirror_y: false
+  swap_xy: "false"
+  mirror_x: "false"
+  mirror_y: "true"
 
 # inspired by https://github.com/RoyalPineapple/esphome/blob/main/m5dial/m5_dial_test.yaml
 
