--- a/albionboxes/prod_kitchen_volume_dial.yaml
+++ b/albionboxes/prod_kitchen_volume_dial.yaml
@@ -7,7 +7,7 @@ substitutions:
   display_rotation: '90'
   receiver_zone_media_player_entity: "media_player.denon_avr_x4300h_zone_3_kitchen"
   swap_xy: "true"
-  mirror_x: "false"
+  mirror_x: "true"
   mirror_y: "false"
 
 # inspired by https://github.com/RoyalPineapple/esphome/blob/main/m5dial/m5_dial_test.yaml
