And again with a new living room controller

--- a/albionboxes/prod_living_room_media_controller.yaml
+++ b/albionboxes/prod_living_room_media_controller.yaml
@@ -4,6 +4,7 @@ substitutions:
   area: Living Room
   comment: "Media controller for Living Room with volume dial and physical buttons"
   box_config_file_name: prod_living_room_media_controller
+  rufus_url: !secret rufus_url
   display_rotation: '180'
   receiver_zone_media_player_entity: "media_player.denon_avr_x4300h_main_zone_living_room"
   swap_xy: "false"
@@ -27,3 +28,15 @@ packages:
   albion_volume_dial: !include common/albion_v3_volume_dial.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
+  gpio_expander: !include common/mcp23017_expander.yaml
+  rufus_activity_request: !include common/rufus_activity_request.yaml
+
+binary_sensor:
+  - <<: !include { file: common/mcp_expander_rufus_activity_request_button.yaml, vars: { pin_name: "A0", pin_number: 0, rufus_url: "${rufus_url}", activity_name: "All Off", activity_url_fragment: "all-off?kitchen=0&dining_room=0" } }
+  - <<: !include { file: common/mcp_expander_rufus_activity_request_button.yaml, vars: { pin_name: "A1", pin_number: 1, rufus_url: "${rufus_url}", activity_name: "Apple TV", activity_url_fragment: "apple-tv?kitchen=0&dining_room=0" } }
+  - <<: !include { file: common/mcp_expander_rufus_activity_request_button.yaml, vars: { pin_name: "A2", pin_number: 2, rufus_url: "${rufus_url}", activity_name: "Vinyl", activity_url_fragment: "vinyl?kitchen=1&dining_room=1" } }
+  - <<: !include { file: common/mcp_expander_rufus_activity_request_button.yaml, vars: { pin_name: "A3", pin_number: 3, rufus_url: "${rufus_url}", activity_name: "Nightly Movie", activity_url_fragment: "nightly-movie" } }
+  - <<: !include { file: common/mcp_expander_rufus_activity_request_button.yaml, vars: { pin_name: "A4", pin_number: 4, rufus_url: "${rufus_url}", activity_name: "WFH", activity_url_fragment: "wfh?kitchen=1&dining_room=1" } }
+  - <<: !include { file: common/mcp_expander_rufus_activity_request_button.yaml, vars: { pin_name: "A5", pin_number: 5, rufus_url: "${rufus_url}", activity_name: "Bedtime", activity_url_fragment: "bedtime?kitchen=0&dining_room=0" } }
+  - <<: !include { file: common/mcp_expander_rufus_activity_request_button.yaml, vars: { pin_name: "A6", pin_number: 6, rufus_url: "${rufus_url}", activity_name: "Nightlight", activity_url_fragment: "nightlight?kitchen=0&dining_room=0" } }
+  - <<: !include { file: common/mcp_expander_rufus_activity_request_button.yaml, vars: { pin_name: "A7", pin_number: 7, rufus_url: "${rufus_url}", activity_name: "JohnCast", activity_url_fragment: "johncast" } }
